# gamos-apps

./: .gitignore  .gitignore~  README.md  builddicom.sh  builddicom.sh~  gamosrun  gamosrun.sh  gamosrun.sh~  rootbrowser.py  tutorialsrun.sh~
buildG4DICOM/: 1.g4dcm  1.g4dcmb  2.g4dcm  2.g4dcmb  3.g4dcm  3.g4dcmb  ALL.g4dcm  ALL.g4dcmb  CMakeLists.txt  CMakeLists.txt~  GNUmakefile  buildG4DICOM.cc
buildG4DICOM/include/: DicomHandler.hh  DicomIntersectVolume.hh  DicomPhantomZSliceHeader.hh
buildG4DICOM/src/: DicomHandler.cc  DicomIntersectVolume.cc  DicomPhantomZSliceHeader.cc
